--- a/AA_Reduced_Order_L5.ipynb
+++ b/AA_Reduced_Order_L5.ipynb
@@ -1511,11 +1511,11 @@
         "print(f\"exp_firing_rates: {exp_firing_rates}\")"
       ],
       "metadata": {
-        "id": "_Qawkus-3Wc_",
-        "outputId": "6e361a02-9395-4014-e16a-f6a2ced9432f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_Qawkus-3Wc_",
+        "outputId": "6e361a02-9395-4014-e16a-f6a2ced9432f"
       },
       "id": "_Qawkus-3Wc_",
       "execution_count": 35,
@@ -1964,11 +1964,11 @@
         "%ls"
       ],
       "metadata": {
-        "id": "mHNxC7GLD8Ta",
-        "outputId": "8c2c7d1f-3405-452a-fd31-11c90a0e41c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mHNxC7GLD8Ta",
+        "outputId": "8c2c7d1f-3405-452a-fd31-11c90a0e41c1"
       },
       "id": "mHNxC7GLD8Ta",
       "execution_count": 46,
@@ -2013,11 +2013,11 @@
         "print(f\"peak_epsp_with_no_nmda: {peak_epsp_no_nmda}\")"
       ],
       "metadata": {
-        "id": "S76emYX7_vBP",
-        "outputId": "183ebeee-f731-4f9a-d77a-4caaeadb2880",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S76emYX7_vBP",
+        "outputId": "183ebeee-f731-4f9a-d77a-4caaeadb2880"
       },
       "id": "S76emYX7_vBP",
       "execution_count": 47,
@@ -2040,12 +2040,12 @@
         "print(f\"baseline voltage: {peak_no_syns}\")"
       ],
       "metadata": {
-        "id": "sHYjxF1WIiIP",
-        "outputId": "46696545-8cd7-4a3c-b8fe-a1a948c2d531",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 448
-        }
+        },
+        "id": "sHYjxF1WIiIP",
+        "outputId": "46696545-8cd7-4a3c-b8fe-a1a948c2d531"
       },
       "id": "sHYjxF1WIiIP",
       "execution_count": 48,
@@ -2101,12 +2101,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "OQ8XsQab6qHr",
-        "outputId": "de9c17e7-70f2-40eb-d934-b8fae61512b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 820
-        }
+        },
+        "id": "OQ8XsQab6qHr",
+        "outputId": "de9c17e7-70f2-40eb-d934-b8fae61512b9"
       },
       "id": "OQ8XsQab6qHr",
       "execution_count": 49,
@@ -2142,17 +2142,17 @@
         "print(f\"peaks_ampa: {peaks_ampa}\")\n",
         "\n",
         "data_to_save = np.column_stack((expected_control, peaks_control, expected_ampa,peaks_ampa))\n",
-        "np.savetxt(f'AA_output/trunk_EPSPs' + '.txt', data_to_save, delimiter='\\t', header='Time\\tVm', comments='')"
+        "np.savetxt(f'AA_output/trunk_EPSPs' + '.txt', data_to_save, delimiter='\\t', header='expected_control\\tpeaks_control\\texpected_ampa\\tpeaks_ampa', comments='')"
       ],
       "metadata": {
-        "id": "wJHaKx4q_MmF",
-        "outputId": "c29f50c2-7770-4243-b880-94ddbd8badc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wJHaKx4q_MmF",
+        "outputId": "f08c547c-7852-4a5d-d665-54de621f5a7f"
       },
       "id": "wJHaKx4q_MmF",
-      "execution_count": 59,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -2230,11 +2230,11 @@
         "!git clone https://github.com/cyneuro/bmtool.git"
       ],
       "metadata": {
-        "id": "3Fdfbr9aG6SL",
-        "outputId": "25090b3c-c5ba-4f3a-fc7c-86dde4dcbd74",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3Fdfbr9aG6SL",
+        "outputId": "25090b3c-c5ba-4f3a-fc7c-86dde4dcbd74"
       },
       "id": "3Fdfbr9aG6SL",
       "execution_count": 53,
@@ -2309,11 +2309,11 @@
         "passive_obj = Passive(Cell, method='exp2')"
       ],
       "metadata": {
-        "id": "V1ljEePcHQLC",
-        "outputId": "3baef2e2-0fd3-48cb-ad10-6fadc23d58d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V1ljEePcHQLC",
+        "outputId": "3baef2e2-0fd3-48cb-ad10-6fadc23d58d4"
       },
       "id": "V1ljEePcHQLC",
       "execution_count": 71,
@@ -2331,14 +2331,14 @@
     {
       "cell_type": "code",
       "source": [
-        "passive_obj.execute() #20.87 (ms); 74.62 (MOhms)"
+        "passive_obj.execute() #20.87 (ms); 75 (MOhms)... Detailed: 31 MOhms; 25 ms"
       ],
       "metadata": {
-        "id": "lDiCi5cK3LRP",
-        "outputId": "4bde70d0-6943-4930-fcc0-906fb9fb7661",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lDiCi5cK3LRP",
+        "outputId": "4bde70d0-6943-4930-fcc0-906fb9fb7661"
       },
       "id": "lDiCi5cK3LRP",
       "execution_count": 75,
