--- a/reduction.ipynb
+++ b/reduction.ipynb
@@ -8,7 +8,11 @@
    "source": [
     "is_colab = 'google.colab' in str(get_ipython())\n",
     "if is_colab:\n",
-    "    !git clone https://github.com/davidfague/Neural-Modeling.git -b cleanup"
+    "    !pip install neuron\n",
+    "    !git clone https://github.com/davidfague/Neural-Modeling.git -b cleanup\n",
+    "    %cd Neural-Modeling/scripts\n",
+    "    !pip install neuron_reduce\n",
+    "    !pip install ipympl"
    ]
   },
   {
