update saving, reading

--- a/notebooks/FindEvents-Copy1.ipynb
+++ b/notebooks/FindEvents-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +79,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: '../scripts/'\n",
+      "/home/drfrbc/Neural-Modeling/scripts/2024-10-11-14-32-54-BenSynapses_final_detailed150sec\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'analysis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 31\u001b[0m\n\u001b[1;32m     29\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     30\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../Modules/\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 31\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01manalysis\u001b[39;00m\n\u001b[1;32m     32\u001b[0m na \u001b[38;5;241m=\u001b[39m analysis\u001b[38;5;241m.\u001b[39mDataReader\u001b[38;5;241m.\u001b[39mread_data(sim_directory, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgNaTa_t_NaTa_t\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mT\n\u001b[1;32m     33\u001b[0m spks \u001b[38;5;241m=\u001b[39m analysis\u001b[38;5;241m.\u001b[39mDataReader\u001b[38;5;241m.\u001b[39mread_data(sim_directory, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msoma_spikes\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'analysis'"
+     ]
+    }
+   ],
    "source": [
     "ben = False\n",
     "if ben:\n",
@@ -102,7 +122,10 @@
     "\n",
     "\n",
     "else:\n",
-    "    sim_directory = '2024-08-09-09-19-21-2500Segs_TripleNa/Complex_Np5'\n",
+    "    sim_directory = 2024-10-11-14-32-54-BenSynapses_final_detailed150secComplex_InhGmaxApic7.1_InhGmaxDend0.0016_SomaGmax0.0025_ExcGmax-1.0351_Np1000/\n",
+    "    #'2024-10-10-15-46-14-BenSynapses_final_detailed/Complex_InhGmaxApic7.1_InhGmaxDend0.0016_SomaGmax0.0025_ExcGmax-1.0351_Np1000'\n",
+    "    #'2024-08-29-12-19-13-CheckdSpikes_AfterTuningSynapses_AfterUpdateExcRates/Complex_InhGmaxApic204_InhGmaxDend7.0_SomaGmax6.0_ExcGmax-1.0351_Np1000'\n",
+    "    #'2024-08-13-23-31-53-TuningSynapses_150%Na/Complex_InhGmax3.0_SomaGmax0.2_Np10'\n",
     "#'2024-08-02-08-31-54-STA/Complex_Np5'\n",
     "    # sim_directory = '2024-07-24-17-33-39-STA/Complex_Np5'\n",
     "#'2024-07-24-15-59-37-STA/Complex_Np5'\n",
@@ -118,7 +141,8 @@
     "    hva = analysis.DataReader.read_data(sim_directory, \"ica_Ca_HVA\").T\n",
     "    lva = analysis.DataReader.read_data(sim_directory, \"ica_Ca_LVAst\").T\n",
     "    ih = analysis.DataReader.read_data(sim_directory, \"ihcn_Ih\").T\n",
-    "    nmda = analysis.DataReader.read_data(sim_directory, \"i_NMDA\").T\n",
+    "    # nmda = analysis.DataReader.read_data(sim_directory, \"i_NMDA\").T\n",
+    "    nmda = analysis.DataReader.read_data(sim_directory, \"inmda\").T\n",
     "    # na = analysis.DataReader.read_data(sim_directory, \"na\")\n",
     "    spktimes = spks[0][:]\n",
     "    spkinds = np.sort((spktimes*10).astype(int))\n"
@@ -198,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +453,8 @@
     "\n",
     "na_df.reset_index(inplace=True, drop=True)\n",
     "segs_na_df = segs.set_index('segmentID').join(na_df.set_index('segmentID')).reset_index()\n",
-    "segs_na_df.to_csv('na.csv')"
+    "if ben:segs_na_df.to_csv('na.csv')\n",
+    "else: segs_na_df.to_csv(os.path.join(sim_directory, 'na.csv'))"
    ]
   },
   {
@@ -448,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +562,8 @@
     "\n",
     "ca_df.reset_index(inplace=True, drop=True)\n",
     "segs_ca_df = segs.set_index('segmentID').join(ca_df.set_index('segmentID')).reset_index()\n",
-    "segs_ca_df.to_csv('ca.csv')"
+    "if ben:segs_ca_df.to_csv('ca.csv')\n",
+    "else:segs_ca_df.to_csv(os.path.join(sim_directory,'ca.csv'))"
    ]
   },
   {
@@ -549,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +649,8 @@
     "\n",
     "nmda_df.rename(columns={'seg_id':'segmentID'},inplace=True)\n",
     "segs_nmda_df = segs.set_index('segmentID').join(nmda_df.set_index('segmentID')).reset_index()\n",
-    "segs_nmda_df.to_csv('nmda.csv')"
+    "if ben: segs_nmda_df.to_csv('nmda.csv')\n",
+    "else: segs_nmda_df.to_csv(os.path.join(sim_directory, 'nmda.csv'))"
    ]
   },
   {
