update nb/main.ipynb (depracting sim notebook)

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -345,6 +345,131 @@
       "(2024-08-13 08:22:36.755218)-[PID: 1606495]–[INFO]: Building soma synapses.\n",
       "(2024-08-13 08:22:36.795020)-[PID: 1606495]–[INFO]: Assigning excitatory spike trains.\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/drfrbc/Neural-Modeling/notebooks/../Modules/spike_generator.py:163: UserWarning: Found non-positive lambdas after shifing a mean.\n",
+      "  warnings.warn(\"Found non-positive lambdas after shifing a mean.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2024-08-13 11:09:59.275077)-[PID: 1606495]–[INFO]: Assigning inhibitory spike trains.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/drfrbc/Neural-Modeling/notebooks/../Modules/spike_generator.py:163: UserWarning: Found non-positive lambdas after shifing a mean.\n",
+      "  warnings.warn(\"Found non-positive lambdas after shifing a mean.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2024-08-13 11:10:19.244831)-[PID: 1606495]–[INFO]: Assigning soma spike trains.\n",
+      "(2024-08-13 11:10:23.498292)-[PID: 1606495]–[INFO]: Finished creating a CellModel object.\n",
+      "(2024-08-13 11:10:23.499972)-[PID: 1606495]–[INFO]: Finish building in 10183.963204145432\n",
+      "(2024-08-13 11:12:17.149597)-[PID: 1606495]–[WARNING]: Recording ECP adds the extracellular channel to all segments after computing electrotonic distance.                                      This channel is therefore not accounted for in impedence calculation, but it might affect the simulation.\n",
+      "(2024-08-13 11:12:29.912460)-[PID: 1606495]–[INFO]: Starting simulation.\n",
+      "(2024-08-13 11:14:49.437452)-[PID: 1606495]–[INFO]: Saving data at step: 10000\n",
+      "(2024-08-13 11:15:01.603013)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:15:01.658338)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:16:54.777011)-[PID: 1606495]–[INFO]: Saving data at step: 20000\n",
+      "(2024-08-13 11:17:06.703636)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:17:06.756889)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:18:25.965187)-[PID: 1606495]–[INFO]: Saving data at step: 30000\n",
+      "(2024-08-13 11:18:36.591289)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:18:36.648076)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:19:54.872455)-[PID: 1606495]–[INFO]: Saving data at step: 40000\n",
+      "(2024-08-13 11:20:05.891249)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:20:05.940923)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:21:24.114801)-[PID: 1606495]–[INFO]: Saving data at step: 50000\n",
+      "(2024-08-13 11:21:35.305696)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:21:35.355717)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:22:51.560214)-[PID: 1606495]–[INFO]: Saving data at step: 60000\n",
+      "(2024-08-13 11:23:02.439251)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:23:02.493901)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:24:20.374929)-[PID: 1606495]–[INFO]: Saving data at step: 70000\n",
+      "(2024-08-13 11:24:31.293957)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:24:31.342954)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:25:49.365305)-[PID: 1606495]–[INFO]: Saving data at step: 80000\n",
+      "(2024-08-13 11:26:00.428107)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:26:00.480579)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:27:19.286130)-[PID: 1606495]–[INFO]: Saving data at step: 90000\n",
+      "(2024-08-13 11:27:30.303313)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:27:30.354319)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:28:48.197695)-[PID: 1606495]–[INFO]: Saving data at step: 100000\n",
+      "(2024-08-13 11:28:59.300215)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:28:59.351841)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:30:17.129736)-[PID: 1606495]–[INFO]: Saving data at step: 110000\n",
+      "(2024-08-13 11:30:27.902921)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:30:27.955706)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:31:45.884499)-[PID: 1606495]–[INFO]: Saving data at step: 120000\n",
+      "(2024-08-13 11:31:56.886175)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:31:56.936090)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:33:14.752178)-[PID: 1606495]–[INFO]: Saving data at step: 130000\n",
+      "(2024-08-13 11:33:25.751335)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:33:25.801740)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:34:43.776007)-[PID: 1606495]–[INFO]: Saving data at step: 140000\n",
+      "(2024-08-13 11:34:54.731160)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:34:54.781916)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:36:12.734960)-[PID: 1606495]–[INFO]: Saving data at step: 150000\n",
+      "(2024-08-13 11:36:23.803657)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:36:23.853181)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:37:42.186704)-[PID: 1606495]–[INFO]: Saving data at step: 160000\n",
+      "(2024-08-13 11:37:53.241151)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:37:53.293650)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:39:11.769638)-[PID: 1606495]–[INFO]: Saving data at step: 170000\n",
+      "(2024-08-13 11:39:22.722011)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:39:22.772253)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:40:41.922480)-[PID: 1606495]–[INFO]: Saving data at step: 180000\n",
+      "(2024-08-13 11:40:52.947613)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:40:52.997573)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:42:11.408126)-[PID: 1606495]–[INFO]: Saving data at step: 190000\n",
+      "(2024-08-13 11:42:22.379751)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:42:22.431283)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:43:38.285648)-[PID: 1606495]–[INFO]: Saving data at step: 200000\n",
+      "(2024-08-13 11:43:49.977496)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:43:50.026362)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:45:05.820397)-[PID: 1606495]–[INFO]: Saving data at step: 210000\n",
+      "(2024-08-13 11:45:17.659016)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:45:17.710868)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:46:34.092024)-[PID: 1606495]–[INFO]: Saving data at step: 220000\n",
+      "(2024-08-13 11:46:46.626408)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:46:46.674705)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:48:03.061546)-[PID: 1606495]–[INFO]: Saving data at step: 230000\n",
+      "(2024-08-13 11:48:14.608112)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:48:14.658296)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:49:30.362707)-[PID: 1606495]–[INFO]: Saving data at step: 240000\n",
+      "(2024-08-13 11:49:42.345657)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:49:42.397042)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:50:58.581198)-[PID: 1606495]–[INFO]: Saving data at step: 250000\n",
+      "(2024-08-13 11:51:10.578836)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:51:10.628862)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:52:27.084552)-[PID: 1606495]–[INFO]: Saving data at step: 260000\n",
+      "(2024-08-13 11:52:40.146421)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:52:40.199729)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:53:58.010305)-[PID: 1606495]–[INFO]: Saving data at step: 270000\n",
+      "(2024-08-13 11:54:11.115126)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:54:11.165722)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:55:26.904134)-[PID: 1606495]–[INFO]: Saving data at step: 280000\n",
+      "(2024-08-13 11:55:40.108549)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:55:40.157862)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:56:56.016152)-[PID: 1606495]–[INFO]: Saving data at step: 290000\n",
+      "(2024-08-13 11:57:09.048530)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:57:09.098208)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:58:25.505343)-[PID: 1606495]–[INFO]: Saving data at step: 300000\n",
+      "(2024-08-13 11:58:38.376668)-[PID: 1606495]–[INFO]: Finished writing data\n",
+      "(2024-08-13 11:58:38.425498)-[PID: 1606495]–[INFO]: Finished clearing recorders\n",
+      "(2024-08-13 11:58:38.521140)-[PID: 1606495]–[INFO]: Finish simulation in 2768.607 seconds\n"
+     ]
     }
    ],
    "source": [
@@ -393,9 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[HayParameters(sim_name='Complex_Np5', numpy_random_state=5, neuron_random_state=90, h_celcius=37, h_tstop=30000, h_dt=0.1, h_v_init=-77.2, CI_on=False, CI_target='soma', h_i_amplitude=10.0, h_i_duration=1000, h_i_delay=10, record_ecp=True, record_seg_to_seg=False, all_synapses_off=False, trunk_exc_synapses=True, perisomatic_exc_synapses=True, add_soma_inh_synapses=True, num_soma_inh_syns=450, inh_gmax_dist=2, soma_gmax_dist=2, exc_gmax_mean_0=-1.2420604129312118, exc_gmax_std_0=0.6878119625182042, exc_gmax_clip=(0, 5), exc_scalar=1, exc_synaptic_density=2.16, inh_synaptic_density=0.22, exc_use_density=False, inh_use_density=False, exc_syn_number=26100, inh_syn_number=2650, use_SA_probs=True, exc_P_release_mean=0.53, exc_P_release_std=0.22, inh_basal_P_release_mean=0.72, inh_basal_P_release_std=0.1, inh_apic_P_release_mean=0.3, inh_apic_P_release_std=0.08, inh_soma_P_release_mean=0.88, inh_soma_P_release_std=0.05, exc_syn_mod='AMPA_NMDA_STP', inh_syn_mod='GABA_AB_STP', inh_prox_mean_fr=16.9, inh_prox_std_fr=14.3, inh_distal_mean_fr=3.9, inh_distal_std_fr=4.9, exc_mean_fr=4.43, exc_std_fr=2.9, exc_constant_fr=False, excFR_increase=0.0, exc_n_FuncGroups=50, exc_n_PreCells_per_FuncGroup=100, inh_n_FuncGroups=10, inh_n_PreCells_per_FuncGroup=50, soma_n_fun_gr=1, soma_n_pc_per_fg=150, exc_functional_group_span=100, exc_cluster_span=10, exc_synapses_per_cluster=5, inh_cluster_span=10, inh_number_of_groups=1, inh_functional_group_span=100, soma_number_of_clusters=15, soma_cluster_span=10, soma_synapses_per_cluster=10, soma_number_of_groups=1, soma_functional_group_span=100, spike_threshold=-10, number_of_presynaptic_cells=2651, PSC_start=5, skip=300, save_every_ms=1000, record_every_time_steps=1, path='2024-08-13-08-20-38-TuningSynapses_reduceNA_shiftExcGmaxBy20Percent/Complex_Np5', reduce_cell=False, expand_cable=False, reduction_frequency=0, choose_branches=22, optimize_nseg_by_lambda=False, merge_synapses=False, segs_per_lambda=10, Hay_biophys='L5PCbiophys3.hoc', build_stylized=False, geometry_file='geom_parameters.csv', only_one_synapse=False, one_syn_index=0, simulate_EPSPs=False, record_soma_spikes=True, record_axon_spikes=False, record_all_channels=True, record_all_synapses=True, record_all_v=True, reduce_cell_NRCE=False, reduce_tufts=False, reduce_apic=False, reduce_basals=0, reduce_obliques=False, synapse_mapping=True, reduce_soma_gpas=False, num_basal_to_replace_with_CI=0, basal_AC_stats=[(0.00693, 0.05926), (-0.0007, 0.05307), (0.01526, 0.09936), (0.00035, 0.0361), (0.00478, 0.17284), (0.01896, 0.07112), (-0.00153, 0.02512), (-0.00151, 0.03715)], num_tuft_to_replace_with_CI=0, tuft_AC_stats=[(0.03897, 0.05233), (0.05814, 0.05911)])]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "all_parameters"
    ]
@@ -409,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,9 +618,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Complex : 12952.6 (s)\n"
+     ]
+    }
+   ],
    "source": [
     "if common_attributes_to_use == 'sta':\n",
     "\n",
@@ -547,9 +691,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-08-13-08-20-38-TuningSynapses_reduceNA_shiftExcGmaxBy20Percent\n"
+     ]
+    }
+   ],
    "source": [
     "print(sim.path)"
    ]
