automate dur_to_use and add saving spikes_table in EventHistograms.ipynb

--- a/notebooks/EventHistograms.ipynb
+++ b/notebooks/EventHistograms.ipynb
@@ -62,7 +62,6 @@
     "    ca_df = pd.read_csv('ca.csv')\n",
     "    nmda_df = pd.read_csv('nmda.csv')\n",
     "else:\n",
-    "    dur_to_use = 150\n",
     "    soma_id_to_use = 0\n",
     "    # sim_directory = '2024-10-12-00-28-34-ZiaoSynapses_final_detailed_refactored150sec/Complex_InhGmaxApic204_InhGmaxDend7.0_SomaGmax6.0_ExcGmax-1.0351_Np1000' # ziao synapses\n",
     "    sim_directory = '2024-10-11-14-32-54-BenSynapses_final_detailed150sec/Complex_InhGmaxApic7.1_InhGmaxDend0.0016_SomaGmax0.0025_ExcGmax-1.0351_Np1000/' # ben synapses refactored detailed 150 sec\n",
@@ -75,6 +74,7 @@
     "    sys.path.append(\"../\")\n",
     "    sys.path.append(\"../Modules/\")\n",
     "    import analysis\n",
+    "    dur_to_use = analysis.DataReader.load_parameters(sim_directory).h_tstop / 1000\n",
     "    # nmda = analysis.DataReader.read_data(sim_directory, \"i_NMDA\").T\n",
     "    nmda = analysis.DataReader.read_data(sim_directory, \"inmda\").T\n",
     "    na = analysis.DataReader.read_data(sim_directory, \"gNaTa_t_NaTa_t\").T\n",
@@ -1026,6 +1026,8 @@
     "\n",
     "# Convert the list of rows into a DataFrame\n",
     "spike_table = pd.DataFrame(rows)\n",
+    "\n",
+    "spike_table.to_csv(os.path.join(sim_directory, 'dSpike_table.csv'))\n",
     "\n",
     "# Display the table\n",
     "print(spike_table)"
